refactor(service): atualizar StudentService para usar getters para campos DTO e melhorar mensagens de erro